# daybreak

./: .gitignore  Cargo.toml  LICENSE  README.md  cspell.json  pre-commit  rustfmt.toml
.github/workflows/: build.yml  clippy.yml  codecov.yml  cspell.yml  links-check.yml  push.yml  security-audit.yml
src/: audit_log.rs  auto_moderation.rs  channel.rs  context.rs  emoji.rs  gateway.rs  guild.rs  http.rs  lib.rs  message.rs  model.rs  models.rs  sticker.rs  tests.rs
src/model/: application.rs  audit_log.rs  auto_moderation.rs  channel.rs  embed.rs  emoji.rs  gateway.rs  guild.rs  integration.rs  interaction.rs  invite.rs  member.rs  message.rs  permission.rs  presence.rs  role.rs  scheduled_event.rs  user.rs  voice.rs  webhook.rs
src/models/: application.rs  attachment.rs  auto_moderation.rs  channel.rs  command.rs  commands.rs  embed.rs  emoji.rs  gateway.rs  guild.rs  interaction.rs  interactions.rs  invite.rs  member.rs  message.rs  presence.rs  role.rs  teams.rs  user.rs  voice.rs
src/tests/: http.rs  model.rs
src/tests/http/: emoji.rs
