[package]
name = "daybreak"
description = "A sophisticated framework for the Discord API"
repository = "https://github.com/gaybreak/daybreak"
keywords = ["api", "discord", "discord-api", "framework"]
categories = ["api-bindings"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies.anyhow]
git = "https://github.com/laralove143/anyhow"

[dependencies.hyper]
version = "0.14"
features = ["client", "http2"]

[dependencies.hyper-rustls]
version = "0.23"
default-features = false
features = ["tokio-runtime", "http2", "webpki-roots"]

[dependencies]
enumflags2 = "0.7"
thiserror = "1.0"
time = "0.3"
