[package]
name = "daybreak"
description = "A sophisticated framework for the Discord API"
repository = "https://github.com/gaybreak/daybreak"
keywords = ["api", "discord", "discord-api", "framework"]
categories = ["api-bindings"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dev-dependencies]
once_cell = "1.14"

[dependencies.anyhow]
git = "https://github.com/laralove143/anyhow"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.hyper]
version = "0.14"
features = ["client", "http2"]

[dependencies.hyper-rustls]
version = "0.23"
default-features = false
features = ["tokio-runtime", "http2", "webpki-roots"]

[dependencies.time]
version = "0.3"
features = ["serde"]

[dependencies]
enumflags2 = "0.7"
thiserror = "1.0"
serde_json = "1.0"
